add ur_move node,signo used, test done

--- a/src/ur_mflee_force/CMakeLists.txt
+++ b/src/ur_mflee_force/CMakeLists.txt
@@ -137,6 +137,7 @@ include_directories(
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/ur_mflee_force_node.cpp)
 add_executable(wrench_pub src/wrench_pub.cpp)
+add_executable(ur_move src/ur_move.cpp)
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
@@ -152,6 +153,10 @@ add_executable(wrench_pub src/wrench_pub.cpp)
 #   ${catkin_LIBRARIES}
 # )
 target_link_libraries(wrench_pub
+  PUBLIC
+  ${catkin_LIBRARIES}
+  ur_rtde::rtde)
+  target_link_libraries(ur_move
   PUBLIC
   ${catkin_LIBRARIES}
   ur_rtde::rtde)
